--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-14  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimpwidgets.[ch]: guard old functions using
+	GIMP_DISABLE_DEPRECATED. Added a note to the docs what functions
+	should be used instead.
+
 2003-11-14  Manish Singh  <yosh@gimp.org>
 
 	* libgimpwidgets/gimpwidgets.[ch]: add gimp_int_option_menu_set_history
