--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,13 @@
+2003-11-14  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/Makefile.am: tell gtk-doc about
+	GIMP_DISABLE_DEPRECATED.
+
+	* libgimpwidgets/libgimpwidgets-sections.txt: added new functions.
+
+	* libgimpwidgets/tmpl/gimpwidgets.sgml: removed outdated docs of
+	deprecated functions.
+
 2003-11-13  Sven Neumann  <sven@gimp.org>
 
 	* app/app-sections.txt: updated.
