2003-11-15 Henrik Brix Andersen <brix@gimp.org>
* plug-ins/common/screenshot.c: added an optional time out before
selecting the window to be grabbed. This fixes bug #121783.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11437 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-15  Henrik Brix Andersen  <brix@gimp.org>
+
+	* plug-ins/common/screenshot.c: added an optional time out before
+	selecting the window to be grabbed. This fixes bug #121783.
+
 2003-11-14  Manish Singh  <yosh@gimp.org>
 
 	* libgimpwidgets/gimpwidgets.[ch]: add
