2003-11-15  Michael Natterer  <mitch@gimp.org>
	* plug-ins/common/gee.c
	* plug-ins/common/gee_zoom.c: use gimp_dialog_new() and connect to
	"response".


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11438 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-15  Michael Natterer  <mitch@gimp.org>
+
+	* plug-ins/common/gee.c
+	* plug-ins/common/gee_zoom.c: use gimp_dialog_new() and connect to
+	"response".
+
 2003-11-15  Henrik Brix Andersen  <brix@gimp.org>
 
 	* plug-ins/common/screenshot.c: added an optional time out before
