--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,11 @@
+2003-11-15  Sven Neumann  <sven@gimp.org>
+
+	* app/Makefile.am (unused_symbols): use $SYMPREFIX as defined by
+	the configure script.
+
+	* libgimpwidgets/libgimpwidgets-sections.txt
+	* libgimpwidgets/tmpl/gimpwidgets.sgml: added new functions.
+
 2003-11-14  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/Makefile.am: tell gtk-doc about
