--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-15  Michael Natterer  <mitch@gimp.org>
+
+	* de.po: Updated during libgimp message cleanup.
+
 2003-11-10  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
