2003-11-15  Danilo Å egan  <dsegan@gmx.net>
	* sr.po, sr@Latn.po: Cleared fuzzy messages.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11444 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-15  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Cleared fuzzy messages.
+
 2003-11-12  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
 
         * es.po: Updated Spanish translation.
