--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,68 @@
+2003-11-15  Michael Natterer  <mitch@gimp.org>
+
+	* plug-ins/FractalExplorer/Dialogs.c
+	* plug-ins/FractalExplorer/FractalExplorer.c
+	* plug-ins/bmp/bmpread.c
+	* plug-ins/bmp/bmpwrite.c
+	* plug-ins/common/CEL.c
+	* plug-ins/common/CML_explorer.c
+	* plug-ins/common/animoptimize.c
+	* plug-ins/common/bz2.c
+	* plug-ins/common/convmatrix.c
+	* plug-ins/common/curve_bend.c
+	* plug-ins/common/dicom.c
+	* plug-ins/common/gauss_iir.c
+	* plug-ins/common/gauss_rle.c
+	* plug-ins/common/gbr.c
+	* plug-ins/common/gif.c
+	* plug-ins/common/gifload.c
+	* plug-ins/common/gih.c
+	* plug-ins/common/grid.c
+	* plug-ins/common/gtm.c
+	* plug-ins/common/gz.c
+	* plug-ins/common/hrz.c
+	* plug-ins/common/jpeg.c
+	* plug-ins/common/mail.c
+	* plug-ins/common/mapcolor.c
+	* plug-ins/common/pat.c
+	* plug-ins/common/pcx.c
+	* plug-ins/common/pix.c
+	* plug-ins/common/png.c
+	* plug-ins/common/pnm.c
+	* plug-ins/common/ps.c
+	* plug-ins/common/psd.c
+	* plug-ins/common/psd_save.c
+	* plug-ins/common/psp.c
+	* plug-ins/common/sel_gauss.c
+	* plug-ins/common/spheredesigner.c
+	* plug-ins/common/sunras.c
+	* plug-ins/common/svg.c
+	* plug-ins/common/tga.c
+	* plug-ins/common/tiff.c
+	* plug-ins/common/wmf.c
+	* plug-ins/common/xbm.c
+	* plug-ins/common/xwd.c
+	* plug-ins/faxg3/faxg3.c
+	* plug-ins/fits/fits.c
+	* plug-ins/flame/flame.c
+	* plug-ins/gfig/gfig.c
+	* plug-ins/gflare/gflare.c
+	* plug-ins/gfli/gfli.c
+	* plug-ins/gimpressionist/brush.c
+	* plug-ins/gimpressionist/ppmtool.c
+	* plug-ins/helpbrowser/domain.c
+	* plug-ins/ifscompose/ifscompose.c
+	* plug-ins/sgi/sgi.c
+	* plug-ins/twain/twain.c
+	* plug-ins/winsnap/winsnap.c
+	* plug-ins/xjt/xjt.c: removed explicit newlines from messages.
+	Made file open/save messages the same all over the place. Reduced
+	number of translatable strings by adding some more "standard"
+	messages. Removed plug-in names from messages. Added some random
+	mnemonics. Unmarked some strings for translation and added some
+	that were forgotten. General message cleanup. Removed trailing
+	whitespace.
+
 2003-11-15  Sven Neumann  <sven@gimp.org>
 
 	* app/gui/preferences-dialog.c: readded a toggle for
