--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-15  Michael Natterer  <mitch@gimp.org>
+
+	* de.po: Updated during plug-in message cleanup.
+
 2003-11-15  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Cleared fuzzy messages.
