2003-11-15  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimpunitmenu.c: include the documentation of the
	format string in the gtk-doc comment.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11449 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,5 +1,9 @@
 2003-11-15  Sven Neumann  <sven@gimp.org>
 
+	* */tmpl/*.sgml: removed unused parameters.
+
+2003-11-15  Sven Neumann  <sven@gimp.org>
+
 	* app/Makefile.am (unused_symbols): use $SYMPREFIX as defined by
 	the configure script.
 
