--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-15  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimpunitmenu.c: include the documentation of the
+	format string in the gtk-doc comment.
+
 2003-11-15  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/FractalExplorer/Dialogs.c
