--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,14 @@
+2003-11-15  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/tmpl/gimpexport.sgml: updated after export change.
+
+	* libgimp/tmpl/gimpgradientselect.sgml
+	* libgimp/tmpl/gimphelp.sgml
+	* libgimp/tmpl/gimpimage.sgml
+	* libgimp/tmpl/gimplayer.sgml
+	* libgimp/tmpl/gimpplugin.sgml: gtk-doc insisted on inserting some
+	blank lines.
+
 2003-11-15  Henrik Brix Andersen  <brix@gimp.org>
 
 	* devel-docs/libgimpmath/tmpl/gimpmatrix.sgml
