2003-11-15  Manish Singh  <yosh@gimp.org>
        * libgimp/gimpui.c: and #undef GTK_DISABLE_DEPRECATED, for
        gtk_preview_set_gamma declaration.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11458 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-15  Manish Singh  <yosh@gimp.org>
+
+	* libgimp/gimpui.c: and #undef GTK_DISABLE_DEPRECATED, for
+	gtk_preview_set_gamma declaration.
+
 2003-11-15  Michael Natterer  <mitch@gimp.org>
 
 	* app/gui/themes.c (themes_get_theme_file): new utility function
