2003-11-15  Michael Natterer  <mitch@gimp.org>
	* libgimp/gimp.def
	* libgimpbase/gimpbase.def: updated for unit changes.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11463 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-11-15  Michael Natterer  <mitch@gimp.org>
 
+	* libgimp/gimp.def
+	* libgimpbase/gimpbase.def: updated for unit changes.
+
+2003-11-15  Michael Natterer  <mitch@gimp.org>
+
 	* libgimpbase/Makefile.am
 	* libgimpbase/gimpbase-private.[ch]
 	* libgimpbase/gimpunit.c: new files implementing GimpUnitVTable
