--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-16  Michael Natterer  <mitch@gimp.org>
+
+	* libgimpbase/gimpunit.c: doc fixes.
+
 2003-11-15  Michael Natterer  <mitch@gimp.org>
 
 	* libgimp/gimp.def
