2003-11-15  Daniel Rogers  <daniel@phasevelocity.org>         * app/tools/gimpellipseselecttool.c         * app/tools/gimprectselectool.c         * app/tools/gimprectselect.h: Includes changes from Sven.         Fixes a bug with alt-draging ellipse and rect selections         on small pixel areas.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11466 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
-2003-11-16  Michael Natterer  <mitch@gimp.org>
+2003-11-15  Daniel Rogers  <daniel@phasevelocity.org>
+	* app/tools/gimpellipseselecttool.c
+	* app/tools/gimprectselectool.c
+	* app/tools/gimprectselect.h: Includes changes from Sven.
+        Fixes a bug with alt-draging ellipse and rect selections
+        on small pixel areas.
+					
+2002-11-16  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpbase/gimpunit.c: doc fixes.
 
