--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-11-16  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimpobject.c: fixed a bad oversight in the
+	implementation of normalized object names. Introduced the helper
+	function gimp_object_name_free() that takes care of freeing
+	the normalized name. Fixes bug #127075.
+
 2003-11-16  Michael Natterer  <mitch@gimp.org>
 
 	* app/gui/dialogs-constructors.c
