2003-11-16  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/Makefile.am (libgimpwidgets_1_3_la_LIBADD): added
	libgimpbase since libgimpwidgets now depends on it.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11472 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-11-16  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/Makefile.am (libgimpwidgets_1_3_la_LIBADD): added
+	libgimpbase since libgimpwidgets now depends on it.
+
+2003-11-16  Sven Neumann  <sven@gimp.org>
+
 	* app/core/gimpobject.[ch]: exposed gimp_object_name_free() and
 	added documentation.
 
