--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-16  Manish Singh  <yosh@gimp.org>
+
+	* libgimpwidgets/Makefile.am: added libgimpbase variable definition
+	so the below works.
+
 2003-11-16  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/Makefile.am (libgimpwidgets_1_3_la_LIBADD): added
