2003-11-16  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/png.c: fixed the default gamma value which I
	broke with my recent change (see bug #120031).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11475 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-11-16  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/png.c: fixed the default gamma value which I
+	broke with my recent change (see bug #120031).
+
+2003-11-16  Sven Neumann  <sven@gimp.org>
+
 	* app/config/gimpbaseconfig.h
 	* app/config/gimpcoreconfig.h: use gint64 for all memsize properties.
 
