--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2003-11-16  Michael Natterer  <mitch@gimp.org>
+
+	* configure.in
+	* themes/Makefile.am
+	* themes/Small/.cvsignore
+	* themes/Small/Makefile.am
+	* themes/Small/gtkrc: added a "Small" theme so users don't have to
+	edit their ~/.gimp-1.3/gtkrc to get the smaller look.
+
+	* app/widgets/gimpdock.c: use "gimp-dock-separator", not just
+	"dock-separator" as widget name.
+
+	* etc/gtkrc: changed accordingly. Removed small style since it is
+	a theme now. Cleanup.
+
 2003-11-16  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/png.c: fixed the default gamma value which I
