2003-11-16  Michael Natterer  <mitch@gimp.org>
	* app/tools/gimprectselecttool.c
	(gimp_rect_select_tool_button_release): remove unused variables.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11477 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-11-16  Michael Natterer  <mitch@gimp.org>
 
+	* app/tools/gimprectselecttool.c
+	(gimp_rect_select_tool_button_release): remove unused variables.
+
+2003-11-16  Michael Natterer  <mitch@gimp.org>
+
 	* configure.in
 	* themes/Makefile.am
 	* themes/Small/.cvsignore
